[added records to DTO and finalizing]